src/app/navbar/nav.component.css
:host {
  --backgroundColor: #161d2f;
}

#nav {
  width: 5vw;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: var(--backgroundColor);
  border-radius: 10px;
  height: 700px;
  margin-left: 32px;
  margin-top: 32px;
  position: relative;
}

#profile {
  width: 40px;
  height: 40px;
  position: absolute;
  bottom: 20px;
}

#allIcons-div {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  height: 200px;
}

.nav-icons {
  margin-bottom: 20px;
}

.homeActive-icon {
  background-image: url("/assets/category-home.png");
  width: 20px !important;
  height: 20px;
}

.homeInactive-icon {
  background-image: url("/assets/icon-nav-home.svg");
  width: 20px;
  height: 20px;
  /* bottom: 50px !important; */
}

.movieInactive-icon {
  background-image: url("/assets/icon-nav-movies.svg");
}

.movieActive-icon {
  background-image: url("/assets/category-movie.png");
}

.seriesInactive-icon {
  background-image: url("/assets/icon-nav-tv-series.svg");
}

.seriesActive-icon {
  background-image: url("/assets/category-tv-icon.png");
}

.bookmarkInactive-icon {
  background-image: url("/assets/icon-nav-bookmark.svg");
}

.bookmarkActive-icon {
  background-image: url("/assets/category-bookmark-icon.png");
}

.movieActive-icon,.movieInactive-icon,
.seriesActive-icon,.seriesInactive-icon,
.bookmarkInactive-icon,.bookmarkActive-icon, 
.homeInactive-icon,.homeActive-icon{
  height: 20px;
  width: 20px;
  bottom: 50px !important;
  background-repeat: no-repeat;
}

.homeInactive-icon:hover {
  background-image: url("/assets/hover-home-icon.png");
}

.movieInactive-icon:hover {
  background-image: url("/assets/hover-movie-icon.png");
}

.seriesInactive-icon:hover {
  background-image: url("/assets/hover-tv-icon.png");
}

.bookmarkInactive-icon:hover{
  background-image: url('/assets/hover-bookmark-icon.png');
}

#logo-img {
  margin-top: 34px;
  margin-bottom: 50px;
}

::placeholder {
  color: rgba(255, 255, 255, 0.712);
}


@media screen and (max-width: 1024px) {
  #nav {
    display: flex;
    flex-direction: row;
    width: 719px;
    height: 72px;
    width: auto;
    margin-right: 32px;
  }

  #allIcons-div {
    flex-direction: row;
    width: 719px;
    height: 72px;
    margin-left: 30px;
    align-items: center;
  }

  .nav-icons {
    margin-right: 20px;
    margin-top: 20px;
  }

  #logo-img {
    width: 32px;
    height: 25.6px;
    margin: 0;
    margin-left: 10px;
    margin-bottom: 0;
  }

  #profile {
    right: 10px;
  }
}

@media screen and (max-width: 768px) {
  #nav {
    display: flex;
    width: 100vw;
    height: 56px;
    margin-left: 0;
    margin-right: 0;
  }

  #allIcons-div {
    flex-direction: row;
    width: 719px;
    height: 56px;
    margin-left: 30px;
    align-items: center;
    position: relative;
  }

  .nav-icons,
  #logo-img {
    justify-content: center;
    top: 0;
    bottom: 0;
  }

  #logo-img {
    width: 32px;
    height: 25.6px;
  }

  #profile {
    bottom: 8px;
  }
}

